2003-04-11  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: update TODO, bind mount, and other entries.

2003-04-10  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): added id tags to 
	facilitate with wysidocbookxml

2003-04-09  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux (EXTRAOPT): Change to use new hostfs options
	for user-mode-linux

2003-04-08  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: update documentation a bit.

	* debian/TODO: update the TODO file wrt bind-mount/hostfs for UML.

	* pbuilder-user-mode-linux: Do not try to umount 
	the mountpoints. There is no point in doing that.
	This works around the problem of non-upgradable UML.

	* pbuilder-modules (pbuilder-options): support IGNORE_UMOUNT
	option, and do not umount.

	* pbuilder-checkparams (IGNORE_UMOUNT): split --no-targz and 
	--internal-build-uml.
	new variable IGNORE_UMOUNT, for ignoring umount.

2003-04-06  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): document 
	bindmounts option.

	* pbuilderrc: add reference to the manual page in the example 
	  configuration file.

	* pbuilder-user-mode-linux (UML_DEBUGMODE): --bindmounts option.

	* debian/TODO: remove bind-mount from TODO.

	* pbuilder.8: document --bindmounts.

	* pbuilder-modules (pbuilder-options): add --bindmounts option

	* pbuilder-checkparams (PRESERVE_BUILDPLACE): add --bindmounts option

	* AUTHORS: update

	* pbuilderrc.5: document BINDMOUNTS option
	
2003-04-05  Sam Hartman  <hartmans@debian.org>
 
 	* pbuilder: Remove warning about bind filesystems as it is no
 	longer true. 
 
 	* pbuilder-modules :  Support Bind mounts
 
 	* pbuilderrc (BINDMOUNTS): New option
 
2003-04-05  Sam Hartman  <hartmans@debian.org>
 
 	* pbuilder-modules (cleanbuildplace): Use find not  rm -rf to
 	clean up; avoid crossing out of the chroot on bind mounts. 
 
2003-03-30  Junichi Uekawa  <dancer@debian.org>
