@@ -1,3 +1,10 @@
+2003-04-17  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml (PBUILDER_UML_IMAGE): update and document 
+	/tmp peculiarity.
+
+	* pbuilder-user-mode-linux.1: document /tmp peculiarity
+
 2003-04-11  Junichi Uekawa  <dancer@debian.org>
 
 	* debian/TODO: update TODO, bind mount, and other entries.
